# lightingSchemePlanner

./: README.md  backend.py  index.html
LightDesignCalc/: README.md  main.py  pyproject.toml  requirements.txt
LightDesignCalc/utils/: calculations.py  calculator.py  constants.py  report.py  visualization.py
