[project] 
name = "Interior Lighting Estimator"
version = "1.0.0"
description = "A Streamlit app to calculate and visualize room lighting using user-defined room dimensions."
requires-python = ">=3.11"
dependencies = [
    "colour>=0.1.5",
    "fpdf>=1.7.2",
    "numpy>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
]